Fix left aligning for accordion

--- a/public/output.css
+++ b/public/output.css
@@ -1061,6 +1061,10 @@ video {
   padding-top: 1rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
